--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "test:e2e": "cypress run --headed"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.29",
